<resources>
    <string name="app_name">ContactNinja</string>
    <string name="noInternet">Please connect to internet!!!</string>
    <string name="tryAgain">Try Again</string>
    <string name="back_button">Please click BACK again to exit.</string>
    <string name="appUpdate">Contact Ninja has downloaded an update</string>
    <string name="install">Install</string>
    <string name="skip">Skip</string>
    <string name="in_1">ContactNinja is a “Multi-Function CRM Tool” providing contact management, outreach support, lead and follow-up tracking, and flexible communications management.</string>
    <string name="in_2">Use the most effective form of communication marketing to outperform your competition with contactninja broadcasts</string>
    <string name="in_3">Share your mission when you bring your business contact info to life on a virtual BZcard</string>
    <string name="welcome">Welcome to \n Contact Ninja!</string>
    <string name="welcome_dis">Helping you keep your contacts informed in the easiest and fastest way possible.</string>
    <string name="account_no">Don\'t have an account?</string>
    <string name="remember_password">Remember Password?</string>
    <string name="signup">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="send">Send</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_code">Enter referral code</string>
    <string name="enter_password">Enter your password</string>
    <string name="or_email">or use email-id</string>
    <string name="or_forgot_password">Forget Password?</string>
    <string name="or_phone">or use phone number</string>
    <string name="terms">I have read and agree to <br> \n Contact Ninja’s <b><u>Terms &amp; Conditions</u></b></br></string>
    <string name="invalid_email1">This email address is not exist</string>
    <string name="invalid_jobtitle">Invalid Job Title</string>
    <string name="add_phone_number">Invalid number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="or_code">Have a referral code ?</string>
    <string name="SignUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="account_yes">Already have an account ?</string>
    <string name="enter_firstname">First name</string>
    <string name="enter_lastname">Last name</string>
    <string name="otp_heder_text">Enter the code We just \n texted you</string>
    <string name="otp_button_text">Verfiy</string>
    <string name="otp_bottom_text">Didn\'t get code ?</string>
    <string name="otp_resend_text">Resend</string>
    <string name="otp_wrong">Wrong OTP entered</string>
    <string name="thanks_heder_text">Thanks for verifying your \n account</string>
    <string name="thanks_info_text">Meet your new digital assistant and contact \n management tool, specifically engineered \n for professional networkers, single business \n owners, and solo-preneurs like you! \n Welcome to The Networking Toolkit that \n  grows with you. 🤝
    </string>
    <string name="thanks_button_text">Get Started</string>
    <string name="plan_type_text">Plan Type</string>
    <string name="plan_text_free_card">Ninja free card</string>
    <string name="plan_text_free">Free</string>
    <string name="plan_text_bz_card">Ninja BZcard</string>
    <string name="plan_text_bz">$9.95</string>
    <string name="plan_text_master">$39.95</string>
    <string name="plan_text_master_card">Ninja text master</string>
    <string name="plan_text_contect">$69.95</string>
    <string name="plan_text_contect_card">ContactNinja</string>
    <string name="plan_deatil_header_text">Ninja free card</string>
    <string name="plan_deatil_button_text">Start your free trial</string>
    <string name="get_started">Get Started !</string>
    <string name="welcome_phone">Connect your Phone Number</string>
    <string name="welcome_Email">Connect your Email Address</string>
    <string name="phone_dis">Adding phone number gives an additional
 security layer for your contact ninja account.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_contect">Add new contact</string>
    <string name="add_sink">Sync All</string>
    <string name="add_new_contect1">Add all contacts</string>
    <string name="remove_new_contect1">Remove all contacts</string>
    <string name="add_new">Add new</string>
    <string name="f_name">First name</string>
    <string name="add_phone">Phone</string>
    <string name="add_number">Add number</string>
    <string name="add_home">Home</string>
    <string name="add_email">Email</string>
    <string name="add_email_a">Add email</string>
    <string name="add_address">Address</string>
    <string name="add_company_address">Company Address</string>
    <string name="add_address_a">Add address</string>
    <string name="add_company">Company</string>
    <string name="other_company">Other company</string>
    <string name="add_company_a">Add company</string>
    <string name="add_company_url">Company URL</string>
    <string name="add_company_url_a">Add company url</string>
    <string name="tv_first">First name</string>
    <string name="ev_first">Add first name</string>
    <string name="tv_last_name">Last name</string>
    <string name="ev_last_name">Add last name</string>
    <string name="tv_bzemail">Email</string>
    <string name="ev_email">Add last name</string>
    <string name="tv_company">Add your company logo</string>
    <string name="ev_company_size">image size 300 by 300</string>
    <string name="tv_recompany">Re-upload logo</string>
    <string name="tv_company_url">Company URL</string>
    <string name="ev_company_url">Add company url</string>
    <string name="add_job">Job title</string>
    <string name="add_job_a">Add job title</string>
    <string name="add_fab">Facebook</string>
    <string name="add_url">URL</string>
    <string name="add_twittera">Twitter</string>
    <string name="add_youtube">Youtube</string>
    <string name="add_breakout">Breakout</string>
    <string name="add_instagram">Instagram</string>
    <string name="add_linkedin1">Linkedin</string>
    <string name="add_pintrest">Pintrest</string>
    <string name="add_venmo">Venmo</string>
    <string name="add_skypay">Skypay</string>
    <string name="add_tiktok">Tiktok</string>
    <string name="add_snapchat">Snapchat</string>
    <string name="add_other_filed">Other filed</string>
    <string name="add_city">City</string>
    <string name="add_city_a">Add city</string>
    <string name="add_state">State</string>
    <string name="add_state_a">Select your state</string>
    <string name="add_zip">Zip code</string>
    <string name="add_zip_a">Add zip Code</string>
    <string name="add_zoom">Zoom id</string>
    <string name="add_zoom_a">Add zoom ID </string>
    <string name="add_note">Note</string>
    <string name="add_note_a">Add your note</string>
    <string name="add_mobile_a">Add phone</string>
    <string name="add_email_address">Add email</string>
    <string name="add_more_field">More fields</string>
    <string name="add_social_link">Add social media links</string>
    <string name="add_social">Social media</string>
    <string name="add_timezone">Timezone</string>
    <string name="add_bod">Birthday</string>
    <string name="add_bob_a">Add birthday</string>
    <string name="add_fb">Facebook</string>
    <string name="add_fb_a">URL</string>
    <string name="add_twitter">Twitter</string>
    <string name="add_breactout">Breakout</string>
    <string name="add_linkedin">Linkedin</string>
    <string name="add_group">Create a \n new group</string>
    <string name="edit_text">Edit contact</string>
    <string name="save_text">Save contact</string>
    <string name="add_defult_text">Set as \n default</string>
    <string name="add_bz_text">This contactNinja \n hasn’t shared a BZcardSet</string>
    <string name="add_exposures_text">This contactNinja \n has no exposures</string>
    <string name="add_group_description_min_txt">100 Characters remaining</string>
    <string name="add_group_all_member">All members</string>
    <string name="add_group_all_more">Add more members</string>
    <string name="add_informaton">Information</string>
    <string name="group_to">To</string>
    <string name="add_new_group">Add new group</string>
    <string name="add_new_group_all">Select all group</string>
    <string name="remove_new_group_all">Remove all group</string>
    <string name="add_task_email">Create a new \n email task</string>
    <string name="add_task_text">Create a new \n Text task</string>
    <string name="add_new_group_name">Intricare technologies</string>
    <string name="group_broadcast">Send broadcast</string>
    <string name="group_broadcast_group">Group text</string>
    <string name="group_name_error">Group text</string>
    <string name="add_broadcast">Broadcast</string>
    <string name="link_add">add your affiliate link</string>
    <string name="text_ok">Password has been sent \n to your register email</string>
    <string name="link_click">your link is attached</string>
    <string name="type_message">Type your message here…</string>
    <string name="error_opps">Oops</string>
    <string name="brodcaste_tank_you">Your broadcast \n has been sent!</string>
    <string name="broadcast_Send_Now">Send now</string>
    <string name="broadcast_Schedule">Schedule</string>
    <string name="email_Send_Now">Send task now</string>
    <string name="email_Schedule">Schedule task</string>
    <string name="daily_text">I want my broadcast to repeat</string>
    <string name="select_date">Please select end date</string>
    <string name="number_text">Number of recurring messages </string>
    <string name="number_text1"> :  ( Max 90 )</string>
    <string name="tv_title">Title Your scheduled broadcast</string>
    <string name="brod_message">Your Broadcast \n has been Schedule!</string>
    <string name="week_text">Your broadcast will repeat weekly</string>
    <string name="week_repete">Repeat every</string>
    <string name="week_txt">Week</string>
    <string name="week_option">Occurs on</string>
    <string name="add_done">Done</string>
    <string name="add_day">Day</string>
    <string name="add_month">Every</string>
    <string name="add_of_monthe">of the month</string>
    <string name="forgot_password">Fogot your password?</string>
    <string name="forgot_password_txt">Enter your registerd email blow \n to receive password</string>
    <string name="forgot_remember">Remember Password?</string>
    <string name="current_Plan">Current Plan</string>
    <string name="Messaging_Template">Messaging Template</string>
    <string name="About_Contact_Ninja">About Contact Ninja</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="Logout">Logout</string>
    <string name="ok">Okay</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_txt">Secure your account with a strong password.</string>
    <string name="campaign">Campaign</string>
    <string name="manual_task_create">Task</string>
    <string name="m_5">5 mins</string>
    <string name="m_15">15 mins</string>
    <string name="m_30">30 mins</string>
    <string name="m_45">45 mins</string>
    <string name="m_60">60 mins</string>
    <string name="select_bzcard">Select Bzcard</string>
    <string name="preview">Preview</string>
    <string name="use_template">Use this template</string>
    <string name="bz_footer">*Represents dummy data, upload photos, videos, and text content to make it your own!</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Share">Share</string>
    <string name="Preview">Preview</string>
    <string name="broadcatse_delete">Delete broadcatse</string>
</resources>