<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    style="@style/CoffeeDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/top_corner15"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/selected_broadcast"
            style="@style/tv_regular_12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/add_broadcast"
            android:textColor="@color/text_reg" />

        <View
            android:id="@+id/line_brodcste"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/browser_actions_bg_grey">

        </View>

        <TextView
            android:id="@+id/selected_campaign"
            style="@style/tv_regular_12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/campaign"
            android:textColor="@color/text_reg" />

        <View
            android:id="@+id/line_caampaign"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/browser_actions_bg_grey">

        </View>

        <TextView
            android:id="@+id/selected_task"
            style="@style/tv_regular_12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/manual_task_create"
            android:textColor="@color/text_reg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/browser_actions_bg_grey">

        </View>



        <TextView
            android:id="@+id/romove_task"
            style="@style/tv_regular_12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/broadcatse_delete"
            android:textColor="@color/text_reg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/browser_actions_bg_grey">

        </View>
    </LinearLayout>
</LinearLayout>