<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet"
    style="@style/CoffeeDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/top_corner15"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/selected_Edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            style="@style/tv_regular_12"
            android:gravity="center"
            android:text="@string/Edit"
            android:textColor="@color/purple_200"
            />
        <View
            android:id="@+id/line_brodcste"
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp">

        </View>
        <TextView
            android:id="@+id/selected_Delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            style="@style/tv_regular_12"
            android:gravity="center"
            android:text="@string/Delete"
            android:textColor="@color/purple_200"
            />
        <View
            android:id="@+id/line_caampaign"
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp">

        </View>

        <TextView
            android:id="@+id/selected_Share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            style="@style/tv_regular_12"
            android:gravity="center"
            android:text="@string/Share"
            android:textColor="@color/purple_200"
            />
        <View
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp">

        </View>
        <TextView
            android:id="@+id/selected_Preview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="10dp"
            style="@style/tv_regular_12"
            android:gravity="center"
            android:text="@string/Preview"
            android:textColor="@color/purple_200"
            />
        <View
            android:background="@color/browser_actions_bg_grey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp">

        </View>
    </LinearLayout>
</LinearLayout>