<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mMainLayout"
    tools:context=".Bzcard.Select_Bzcard_Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/tv_Medium_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:text="@string/select_bzcard"
        android:textColor="@color/text_reg" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_button"
        android:layout_below="@+id/txt_title"
        android:layout_weight="1"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_footer"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Preview"
            style="@style/tv_regular_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_50_blue_line"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/preview"
            android:textColor="@color/purple_200" />

        <TextView
            android:id="@+id/txt_Use"
            style="@style/tv_regular_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_50_blue"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/use_template"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_footer"
        style="@style/tv_regular_13"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/bz_footer"
        android:textColor="@color/text_gray" />
</RelativeLayout>